fix(layout): correct canonical links, padding on small devices

--- a/apps/deliciousreverie/public/styles/global.css
+++ b/apps/deliciousreverie/public/styles/global.css
@@ -38,3 +38,8 @@ h6 {
 .max-w-contain {
   max-width: 30em;
 }
+@media (max-width: 640px) {
+  .max-w-contain {
+    padding: 0 1rem;
+  }
+}
